Few fixes and Readme Update
