# LumenAuthorsApi/storage/api-docs/api-docs.json
@@ -1,263 +1,1 @@
-{
-    "openapi": "3.0.0",
-    "info": {
-        "title": "Author API",
-        "description": "Author API Documentation",
-        "contact": {
-            "name": "Support Team",
-            "email": "support@example.com"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0.0"
-    },
-    "servers": [
-        {
-            "url": "http://localhost:8085/",
-            "description": "API server"
-        }
-    ],
-    "paths": {
-        "/authors": {
-            "get": {
-                "tags": [
-                    "Authors"
-                ],
-                "summary": "Gets list of Authors",
-                "description": "Returns list of authors",
-                "operationId": "getAuthorsList",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "Authors"
-                ],
-                "summary": "Stores a new Author",
-                "description": "Returns Author store status",
-                "operationId": "storeAuthor",
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "Author Name",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "gender",
-                        "in": "query",
-                        "description": "Author Gender",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "country",
-                        "in": "query",
-                        "description": "Author Country",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Data Successfully Stored"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ]
-            }
-        },
-        "/authors/{id}": {
-            "get": {
-                "tags": [
-                    "Authors"
-                ],
-                "summary": "Get Author information",
-                "description": "Returns author data",
-                "operationId": "getAuthorById",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "query",
-                        "description": "Author id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Data Successful"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ]
-            },
-            "put": {
-                "tags": [
-                    "Authors"
-                ],
-                "summary": "Update existing author",
-                "description": "Returns updated author data",
-                "operationId": "updateAuthor",
-                "parameters": [
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "Author Name",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "gender",
-                        "in": "query",
-                        "description": "Author Gender",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "country",
-                        "in": "query",
-                        "description": "Author Country",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "description": "Pass user credentials",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "email",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "email": {
-                                        "type": "string",
-                                        "format": "email",
-                                        "example": "user1@mail.com"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "PassWord12345"
-                                    },
-                                    "persistent": {
-                                        "type": "boolean",
-                                        "example": "true"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Data Successful"
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Sorry, wrong email address or password. Please try again"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "Authors"
-                ],
-                "summary": "Delete existing author",
-                "description": "Deletes a author and returns no content",
-                "operationId": "deleteAuthor",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "query",
-                        "description": "author id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Data Successful"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ]
-            }
-        }
-    }
-}
+{"openapi":"3.0.0","info":{"title":"Author API","description":"Author API Documentation","contact":{"name":"Support Team","email":"support@example.com"},"license":{"name":"Apache 2.0","url":"http:\/\/www.apache.org\/licenses\/LICENSE-2.0.html"},"version":"1.0.0"},"servers":[{"url":"http:\/\/localhost:8000\/","description":"API server"}],"paths":{"\/authors":{"get":{"tags":["Authors"],"summary":"Gets list of Authors","description":"Returns list of authors","operationId":"getAuthorsList","responses":{"200":{"description":"Data Successful","content":{"application\/json":{"schema":{"properties":{"data":{"type":"object"}},"type":"object"}}}},"401":{"description":"Unauthorized","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Unauthorized"},"code":{"type":"string","example":401}},"type":"object"}}}},"403":{"description":"Forbidden","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Forbidden"},"code":{"type":"string","example":403}},"type":"object"}}}},"404":{"description":"Not Found","content":{"application\/json":{"schema":{"properties":{"message":{"type":"string","example":"Not Found"},"code":{"type":"string","example":404}},"type":"object"}}}}},"security":[{"Bearer":[]}]},"post":{"tags":["Authors"],"summary":"Stores a new Author","description":"Returns Author store status","operationId":"storeAuthor","requestBody":{"description":"Pass author details","required":true,"content":{"application\/json":{"schema":{"required":["name","gender","country"],"properties":{"name":{"description":"name","type":"string"},"gender":{"description":"gender","type":"string"},"country":{"description":"country","type":"string"}},"type":"object"}}}},"responses":{"200":{"description":"Data Successful","content":{"application\/json":{"schema":{"properties":{"data":{"type":"object"}},"type":"object"}}}},"201":{"description":"Data Successfully Created","content":{"application\/json":{"schema":{"properties":{"data":{"type":"object"}},"type":"object"}}}},"401":{"description":"Unauthorized","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Unauthorized"},"code":{"type":"string","example":401}},"type":"object"}}}},"403":{"description":"Forbidden","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Forbidden"},"code":{"type":"string","example":403}},"type":"object"}}}},"404":{"description":"Not Found","content":{"application\/json":{"schema":{"properties":{"message":{"type":"string","example":"Not Found"},"code":{"type":"string","example":404}},"type":"object"}}}}},"security":[{"Bearer":[]}]}},"\/authors\/{id}":{"get":{"tags":["Authors"],"summary":"Get Author information","description":"Returns author data","operationId":"getAuthorById","parameters":[{"name":"id","in":"query","description":"Author id","required":true,"schema":{"type":"integer"}}],"responses":{"200":{"description":"Data Successful","content":{"application\/json":{"schema":{"properties":{"data":{"type":"object"}},"type":"object"}}}},"401":{"description":"Unauthorized","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Unauthorized"},"code":{"type":"string","example":401}},"type":"object"}}}},"403":{"description":"Forbidden","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Forbidden"},"code":{"type":"string","example":403}},"type":"object"}}}},"404":{"description":"Not Found","content":{"application\/json":{"schema":{"properties":{"message":{"type":"string","example":"Not Found"},"code":{"type":"string","example":404}},"type":"object"}}}}},"security":[{"Bearer":[]}]},"put":{"tags":["Authors"],"summary":"Update existing author","description":"Returns updated author data","operationId":"updateAuthor","parameters":[{"name":"id","in":"query","description":"Author ID","required":true,"schema":{"type":"string"}}],"requestBody":{"description":"Pass user credentials","content":{"application\/json":{"schema":{"properties":{"email":{"type":"string","format":"email","example":"user1@mail.com"},"password":{"type":"string","format":"password","example":"PassWord12345"},"persistent":{"type":"boolean","example":"true"}},"type":"object"}}}},"responses":{"200":{"description":"Data Successful","content":{"application\/json":{"schema":{"properties":{"data":{"type":"object"}},"type":"object"}}}},"401":{"description":"Unauthorized","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Unauthorized"},"code":{"type":"string","example":401}},"type":"object"}}}},"403":{"description":"Forbidden","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Forbidden"},"code":{"type":"string","example":403}},"type":"object"}}}},"404":{"description":"Not Found","content":{"application\/json":{"schema":{"properties":{"message":{"type":"string","example":"Not Found"},"code":{"type":"string","example":404}},"type":"object"}}}}},"security":[{"Bearer":[]}]},"delete":{"tags":["Authors"],"summary":"Delete existing author","description":"Deletes a author and returns no content","operationId":"deleteAuthor","parameters":[{"name":"id","in":"query","description":"Author ID","required":true,"schema":{"type":"integer"}}],"responses":{"200":{"description":"Data Successful","content":{"application\/json":{"schema":{"properties":{"data":{"type":"object"}},"type":"object"}}}},"401":{"description":"Unauthorized","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Unauthorized"},"code":{"type":"string","example":401}},"type":"object"}}}},"403":{"description":"Forbidden","content":{"application\/json":{"schema":{"properties":{"error":{"type":"string","example":"Forbidden"},"code":{"type":"string","example":403}},"type":"object"}}}},"404":{"description":"Not Found","content":{"application\/json":{"schema":{"properties":{"message":{"type":"string","example":"Not Found"},"code":{"type":"string","example":404}},"type":"object"}}}}},"security":[{"Bearer":[]}]}}},"components":{"securitySchemes":{"passport":{"type":"oauth2","description":"Laravel passport oauth2 security.","in":"header","scheme":"https","flows":{"password":{"authorizationUrl":"http:\/\/localhost\/oauth\/authorize","tokenUrl":"http:\/\/localhost\/oauth\/token","refreshUrl":"http:\/\/localhost\/token\/refresh","scopes":[]}}}}}}
